--- a/src/app/components/cards/cards.component.scss
+++ b/src/app/components/cards/cards.component.scss
@@ -14,7 +14,7 @@
   flex-direction: column;
   align-items: center;
   width: 550px;
-  margin: 0px 20px 0px 20px;
+  margin: 20px;
   border-radius: 20px;
   border: none;
   box-shadow: 0 0 30px $color_shadow_card;
