--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -7,7 +7,7 @@
 <div class="container">
 	<div class="row">
 		<div class="col-md-6">
-			<img class="img-fluid" src="../../assets/logo/leticia.jpg">
+			<img class="img-fluid" src="./assets/logo/leticia.jpg">
 		</div>
 		<div class="col-md-6 p-5 my-5">
 			<p class="lh-lg py-3" i18n>Ei! Meu nome é Letícia Lima, atualmente trabalho com desenvolvimento de sistemas com Python e Django Framework. Nos tempos livre trabalho como freelancer em projetos de Desenvolvimento Web.</p>
