--- a/src/app/components/cards/cards.component.html
+++ b/src/app/components/cards/cards.component.html
@@ -7,7 +7,7 @@
 	<div *ngFor="let el of cardItems; let i = index">
 		<div class="card-row">
 
-				<img src="../../../assets/image{{ el.image }}" class="card-img-top" alt="...">
+				<img src="./assets/image{{ el.image }}" class="card-img-top" alt="...">
 
 				<div class="card-body p-3">
 					<h5 class="card-title">{{ el.name }}</h5>
