--- a/src/styles.scss
+++ b/src/styles.scss
@@ -118,5 +118,8 @@ a {
   }
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+@media (max-width: 768px) {
+  .container {
+    padding: 0;
+  }
+}
