cria hover no menu para mostrar o que ta escrito

--- a/src/app/components/top-menu/top-menu.html
+++ b/src/app/components/top-menu/top-menu.html
@@ -2,7 +2,7 @@
   <nav class="navbar">
     <div class="nav-container">
       <a routerLink="/" class="logo">
-        <span class="logo-text">Letícia Lima</span>
+        <span class="logo-text">Portfolio</span>
       </a>
 
       <button class="menu-toggle" (click)="toggleMenu()" [class.active]="isMenuOpen()">
