--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -1,7 +1,7 @@
 <section class="about-section">
   <div class="container">
     <div class="section-header">
-      <h1>Sobre Mim</h1>
+      <h1>{{ 'about.title' | translate }}</h1>
       <div class="underline"></div>
     </div>
 
@@ -11,22 +11,12 @@
       </div>
 
       <div class="about-text">  
-        <p>
-          Olá! Meu nome é Letícia Lima, atualmente trabalho com desenvolvimento de sistemas com Python e Django Framework. 
-          Nos tempos livres trabalho como freelancer em projetos de Desenvolvimento Web.
-        </p>
-
-        <p>
-          Sou formada em Engenharia da Computação com foco em programação e sistemas, 
-          possuo uma visão ampla e sólida de ferramentas e conceitos. Tenho experiência em Python, Django e Angular, programando diversos tipos de aplicações Web.
-        </p>
-
-        <p>
-          Fique a vontade para conhecer meus projetos.
-        </p>
+        <p>{{ 'about.intro1' | translate }}</p>
+        <p>{{ 'about.intro2' | translate }}</p>
+        <p>{{ 'about.intro3' | translate }}</p>
 
         <div class="skills">
-          <h3>Habilidades</h3>
+          <h3>{{ 'about.skills' | translate }}</h3>
           <div class="skills-grid">
             <div class="skill-item">
               <span class="material-icons skill-icon">code</span>
